--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div id="header-carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <video class="position-absolute w-100 h-100" autoplay loop muted>
-                    <source src="video/signia_2bhk.mp4" type="video/mp4">
+                    <source src="video/home-video.mp4" type="video/mp4">
                 </video>
                 <div class="carousel-item position-relative active" style="height: 100vh; min-height: 400px;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
