--- a/virtual-tour/index.html
+++ b/virtual-tour/index.html
@@ -77,7 +77,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-7">
                     <video class="content-video w-100 h-100" autoplay loop muted>
-                        <source src="../video/signia_2.mp4" type="video/mp4">
+                        <source src="../video/ambit-2bhk.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="col-lg-5">
