--- a/webar-brochure/index.html
+++ b/webar-brochure/index.html
@@ -260,19 +260,19 @@
                     <div class="col">
                         <div class="text-md-center">
                             <h5 class="text-primary text-uppercase mb-2" style="letter-spacing: 5px;">Our Office</h5>
-                            <p class="mb-4 m-md-0">123 Street, New York, USA</p>
+                            <p class="mb-4 m-md-0">#6, Meghdoot Building, 6, Gulmohar Cross Road, JVPD Scheme, Mumbai: 400049</p>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="text-md-center">
                             <h5 class="text-primary text-uppercase mb-2" style="letter-spacing: 5px;">Email Us</h5>
-                            <p class="mb-4 m-md-0">siddhu19@live.com</p>
+                            <a class="mb-4 m-md-0" href="mailto:devvrshah@tech-triq.com" style="color: white;">devvrshah@tech-triq.com</a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="text-md-center">
                             <h5 class="text-primary text-uppercase mb-2" style="letter-spacing: 5px;">Call Us</h5>
-                            <p class="m-0s">+91 9702321345</p>
+                            <a class="m-0s" href="tel:917710000963" style="color: white;">+91 7710000963</a>
                         </div>
                     </div>
                 </div>
