--- a/virtual-tour/index.html
+++ b/virtual-tour/index.html
@@ -84,6 +84,10 @@
                     <h5 class="text-uppercase text-primary mb-3" style="letter-spacing: 3px;">Interactive 360 Virtual Tour</h5>
                     <h1 class="display-4 mb-3">Give your Buyers an <span class="text-primary">Unforgettable First Impression</span></h1>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    <br>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    </p>
+                    <a class="btn btn-primary font-weight-bold btn-scroll py-3 px-5 mt-2" type="button" href="#service">Explore Features</a>
                 </div>
             </div>
         </div>
