add icons to features section

--- a/aerial-tour/index.html
+++ b/aerial-tour/index.html
@@ -120,83 +120,109 @@
                 <h1 class="font-secondary display-4">Various Features</h1>
             </div>
             <div class="row">
-                <div class="col-lg-4 mb-3">
+                <div class="col-lg-3 mb-3">
                     <div class="product-item mb-2">
                         <div class="project-item">
-                            <img class="img-fluid" src="../img/product-3.jpg" alt="">
+                            <img class="img-fluid" src="../img/icons/hotspot.webp" alt="">
                             <a class="btn btn-project-features">
                                 <p>Our most popular feature to interact & display information interactively inside your Virtual Tour</p>
                             </a>
                         </div>
-                        <div class="bg-secondary text-center p-4">
+                        <!-- <div class="bg-secondary text-center p-4">
                             <h3 class="m-0">Hotspots</h3>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
-                <div class="col-lg-4 mb-3">
+                <div class="col-lg-3 mb-3">
                     <div class="product-item mb-2">
                         <div class="project-item">
-                            <img class="img-fluid" src="../img/product-3.jpg" alt="">
+                            <img class="img-fluid" src="../img/icons/theme.webp" alt="">
                             <a class="btn btn-project-features">
                                 <p>Integrate corporate ID design attributes into your VT’s blueprint, features, and presentation</p>
                             </a>
                         </div>
-                        <div class="bg-secondary text-center p-4">
+                        <!-- <div class="bg-secondary text-center p-4">
                             <h3 class="m-0">Styled Theme</h3>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
-                <div class="col-lg-4 mb-3">
+                <div class="col-lg-3 mb-3">
                     <div class="product-item mb-2">
                         <div class="project-item">
-                            <img class="img-fluid" src="../img/product-3.jpg" alt="">
+                            <img class="img-fluid" src="../img/icons/floor plan.webp" alt="">
+                            <a class="btn btn-project-features">
+                                <p>From your provided artwork, we can add navigation elements to a campus map. This is used inside the tour window to seamlessly flow from one 360 image to another.</p>
+                            </a>
+                        </div>
+                        <!-- <div class="bg-secondary text-center p-4">
+                            <h3 class="m-0">Interactive Floor Plan</h3>
+                        </div> -->
+                    </div>
+                </div>
+                <div class="col-lg-3 mb-3">
+                    <div class="product-item mb-2">
+                        <div class="project-item">
+                            <img class="img-fluid" src="../img/icons/analytics.webp" alt="">
                             <a class="btn btn-project-features">
                                 <p>Built-in detailed online reporting of what your viewers are seeing within the tour. This includes all scene view, hotspot interactions using our advanced platform.</p>
                             </a>
                         </div>
-                        <div class="bg-secondary text-center p-4">
+                        <!-- <div class="bg-secondary text-center p-4">
                             <h3 class="m-0">Detailed Analytics</h3>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
-                <div class="col-lg-4 mb-3">
+                <div class="col-lg-3 mb-3">
                     <div class="product-item mb-2">
                         <div class="project-item">
-                            <img class="img-fluid" src="../img/product-3.jpg" alt="">
+                            <img class="img-fluid" src="../img/icons/info.webp" alt="">
                             <a class="btn btn-project-features">
                                 <p>Guide your prospects & enable direct interaction with your company info & contact details.</p>
                             </a>
                         </div>
-                        <div class="bg-secondary text-center p-4">
+                        <!-- <div class="bg-secondary text-center p-4">
                             <h3 class="m-0">Information Buttons</h3>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
-                <div class="col-lg-4 mb-3">
+                <div class="col-lg-3 mb-3">
                     <div class="product-item mb-2">
                         <div class="project-item">
-                            <img class="img-fluid" src="../img/product-3.jpg" alt="">
+                            <img class="img-fluid" src="../img/icons/gmaps.webp" alt="">
                             <a class="btn btn-project-features">
                                 <p>Encourage easy access to your company’s physical location with a clear & embedded map.</p>
                             </a>
                         </div>
-                        <div class="bg-secondary text-center p-4">
+                        <!-- <div class="bg-secondary text-center p-4">
                             <h3 class="m-0">Integration of Google Maps</h3>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
-                <div class="col-lg-4 mb-3">
+                <div class="col-lg-3 mb-3">
                     <div class="product-item mb-2">
                         <div class="project-item">
-                            <img class="img-fluid" src="../img/product-3.jpg" alt="">
+                            <img class="img-fluid" src="../img/icons/daynight.webp" alt="">
                             <a class="btn btn-project-features">
                                 <p>Seamlessly transition from one perspective to another with exceptional light & dark viewing.</p>
                             </a>
                         </div>
-                        <div class="bg-secondary text-center p-4">
+                        <!-- <div class="bg-secondary text-center p-4">
                             <h3 class="m-0">Day-To-Night Transition</h3>
-                        </div>
+                        </div> -->
                     </div>
+                </div>
+                <div class="col-lg-3 mb-3">
+                    <div class="product-item mb-2">
+                        <div class="project-item">
+                            <img class="img-fluid" src="../img/icons/voice.webp" alt="">
+                            <a class="btn btn-project-features">
+                                <p>Tell story about your project with Custom voice overs to make it stand out</p>
+                            </a>
+                        </div>
+                        <!-- <div class="bg-secondary text-center p-4">
+                            <h3 class="m-0">Voice Over</h3>
+                        </div>
+ -->                    </div>
                 </div>
             </div>
         </div>
