--- a/webar-brochure/index.html
+++ b/webar-brochure/index.html
@@ -119,7 +119,20 @@
                 <h1 class="font-secondary display-4">Various Features</h1>
             </div>
             <div class="row">
-                <div class="col-lg-4 mb-3">
+                <div class="col-lg-3 mb-3">
+                    <div class="product-item mb-2">
+                        <div class="project-item">
+                            <img class="img-fluid" src="../img/product-3.jpg" alt="">
+                            <a class="btn btn-project-features">
+                                <p>Our AI-based tracking surpasses performance of traditional Computer-vision model in other WebAR systems</p>
+                            </a>
+                        </div>
+                        <div class="bg-secondary text-center p-4">
+                            <h3 class="m-0">AI Image Tracking</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 mb-3">
                     <div class="product-item mb-2">
                         <div class="project-item">
                             <img class="img-fluid" src="../img/product-3.jpg" alt="">
@@ -128,11 +141,24 @@
                             </a>
                         </div>
                         <div class="bg-secondary text-center p-4">
-                            <h3 class="m-0">Immersive 3D Model</h3>
+                            <h3 class="m-0">Interactive 3D Model</h3>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 mb-3">
+                <div class="col-lg-3 mb-3">
+                    <div class="product-item mb-2">
+                        <div class="project-item">
+                            <img class="img-fluid" src="../img/product-3.jpg" alt="">
+                            <a class="btn btn-project-features">
+                                <p>Our WebAR system can be easily integrated to any of your new/exsisting product without any hassle</p>
+                            </a>
+                        </div>
+                        <div class="bg-secondary text-center p-4">
+                            <h3 class="m-0">Plug-n-Play System</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 mb-3">
                     <div class="product-item mb-2">
                         <div class="project-item">
                             <img class="img-fluid" src="../img/product-3.jpg" alt="">
@@ -145,7 +171,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 mb-3">
+                <div class="col-lg-3 mb-3">
                     <div class="product-item mb-2">
                         <div class="project-item">
                             <img class="img-fluid" src="../img/product-3.jpg" alt="">
@@ -158,12 +184,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 mb-3">
+                <div class="col-lg-3 mb-3">
                     <div class="product-item mb-2">
                         <div class="project-item">
                             <img class="img-fluid" src="../img/product-3.jpg" alt="">
                             <a class="btn btn-project-features">
-                                <p>Experience the interactive brochure instantly - no waiting for downloads or streaming</p>
+                                <p>Our system is completely build in JavaScript, lighter than ever - no waiting for downloads or streaming</p>
                             </a>
                         </div>
                         <div class="bg-secondary text-center p-4">
@@ -171,7 +197,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 mb-3">
+                <div class="col-lg-3 mb-3">
                     <div class="product-item mb-2">
                         <div class="project-item">
                             <img class="img-fluid" src="../img/product-3.jpg" alt="">
@@ -184,12 +210,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 mb-3">
+                <div class="col-lg-3 mb-3">
                     <div class="product-item mb-2">
                         <div class="project-item">
                             <img class="img-fluid" src="../img/product-3.jpg" alt="">
                             <a class="btn btn-project-features">
-                                <p>Optimized for fast loading times – ensuring a smooth, seamless experience</p>
+                                <p>We optimize your 3D models for fast loading times – ensuring a smooth, seamless experience</p>
                             </a>
                         </div>
                         <div class="bg-secondary text-center p-4">
